[64230] Accessibility, Contrast issues (#19608)
* change grid line colors

* set a color for the avatar that has a good contrast with bg color

* set menu item color for the header, set high contrast colors for all colors not only high contrast ones

* increase font size and color of bar graphs

* remove color mode from color service tohsl method

* remove transfor uppercase text for headlines

* remove --main-menu-fieldset-header-color variable which is not needed anymore

* change border color

* fix eslint errors

* remove uppercase test for sub menu title

--- a/frontend/src/global_styles/content/_forms.sass
+++ b/frontend/src/global_styles/content/_forms.sass
@@ -271,7 +271,7 @@ fieldset.form--fieldset
       padding: 0.625rem 0.25rem 0 0.25rem
 
 #main-menu .form--fieldset-legend
-  color: var(--main-menu-fieldset-header-color)
+  color: var(--main-menu-font-color)
   margin-bottom: 1rem
 
 .form--toolbar
